[metadata]
name = glue-astronomy
provides = glue_astronomy
author = Thomas Robitaille
author_email = glue.viz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-astronomy
description = Astronomy-specific plugins for glue
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    astropy>=4.0
    glue-core>=1.0
    regions>=0.4
    specutils>=0.7
    spectral-cube>=0.5.0

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinxcontrib-spelling
    numpydoc
    sphinx-rtd-theme
test =
    pytest
    pytest-astropy
    pytest-cov
    mock
qt =
    PyQt5

[options.entry_points]
glue.plugins =
    glue_astronomy = glue_astronomy:setup
    spectral_cube = glue_astronomy.io.spectral_cube:setup

[options.package_data]
glue_astronomy.io.spectral_cube.tests = data/*, data/*/*,  data/*/*/*

[tool:pytest]
minversion = 6
testpaths = docs glue_astronomy
doctest_plus = enabled
xfail_strict = true
filterwarnings =
    error
    ignore:numpy\.ndarray size changed:RuntimeWarning

[flake8]
max-line-length = 100
