[metadata]
name = glue-astronomy
provides = glue_astronomy
author = Thomas Robitaille
author_email = glue.viz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-astronomy
description = Astronomy-specific plugins for glue
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    astropy>=4.0
    glue-core>=1.0

[options.extras_require]
all =
    regions>=0.4
    specutils>=0.7
    specreduce>=1.0.0
    spectral-cube>=0.6.0
docs =
    sphinx
    sphinx-automodapi
    sphinxcontrib-spelling
    numpydoc
    sphinx-rtd-theme
test =
    pytest
    pytest-astropy
    pytest-cov
    mock
    regions>=0.4
    specutils>=0.7
    specreduce>=1.0.0
    spectral-cube>=0.6.0
qt =
    PyQt5

[options.entry_points]
glue.plugins =
    ccddata = glue_astronomy.translators:setup_ccddata
    regions = glue_astronomy.translators:setup_regions
    spectrum1d = glue_astronomy.translators:setup_spectrum1d
    spectral_cube = glue_astronomy.translators:setup_spectral_cube
    spectral_cube_io = glue_astronomy.io.spectral_cube:setup
    trace = glue_astronomy.translators:setup_trace

[options.package_data]
glue_astronomy.io.spectral_cube.tests = data/*, data/*/*,  data/*/*/*

[tool:pytest]
minversion = 6
testpaths = docs glue_astronomy
doctest_plus = enabled
xfail_strict = true
filterwarnings =
    error
    ignore:numpy\.ndarray size changed:RuntimeWarning

[flake8]
max-line-length = 100
