[metadata]
name = glue-astronomy
provides = glue_astronomy
author = Thomas Robitaille
author_email = glue.viz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-astronomy
description = Astronomy-specific plugins for glue
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm
install_requires =
    astropy>=4.0
    glue-core>=1.6.1
    regions>=0.4
    specutils>=1.20
    specreduce>=1.0.0
    spectral-cube>=0.6.0

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinxcontrib-spelling
    numpydoc
    sphinx-rtd-theme
hips =
    reproject>=0.16.0 ; python_version>='3.11'
test =
    pytest
    pytest-astropy
    pytest-cov
    mock
qt =
    PyQt5
visualtest =
    pytest-mpl

[options.entry_points]
glue.plugins =
    glue_astronomy = glue_astronomy:setup
    spectral_cube = glue_astronomy.io.spectral_cube:setup

[options.package_data]
glue_astronomy.io.spectral_cube.tests = data/*, data/*/*,  data/*/*/*

[tool:pytest]
minversion = 6
testpaths = docs glue_astronomy
doctest_plus = enabled
xfail_strict = true
filterwarnings =
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:`product` is deprecated
    ignore:The isiterable function is deprecated and may be removed in a future version
    ignore:CoordinateHelper
    ignore:No observer defined on WCS
markers =
    mpl_image_compare

[flake8]
max-line-length = 100
